--- a/components/txtx-ext-bitcoin/Cargo.toml
+++ b/components/txtx-ext-bitcoin/Cargo.toml
@@ -5,7 +5,12 @@ edition = "2021"
 
 [dependencies]
 sha2 = "0.10.8"
-rand = "0.8.4"
 # strum = "0.25.0"
 # strum_macros = "0.25.3"
 txtx-ext-kit = { path = "../txtx-ext-kit" }
+
+[features]
+wasm = ["txtx-ext-kit/wasm"]
+
+[lib]
+crate-type = ["lib", "cdylib"] 
