--- a/components/txtx-ext-kit/Cargo.toml
+++ b/components/txtx-ext-kit/Cargo.toml
@@ -10,3 +10,9 @@ hcl-edit = "0.7.5"
 serde = "1"
 serde_derive = "1"
 url = { version = "2.2.2", features = ["serde"] }
+
+[features]
+wasm = []
+
+[lib]
+crate-type = ["lib", "cdylib"] 
