--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,7 +47,7 @@ jobs:
         run: cargo build --package txtx-vm --release --locked --target wasm32-unknown-unknown --features wasm
 
       - name: Build WASM for txtx-ext-kit
-        run: cargo build --package txtx--ext-kit --release --locked --target wasm32-unknown-unknown --features wasm
+        run: cargo build --package txtx-ext-kit --release --locked --target wasm32-unknown-unknown --features wasm
 
       - name: Build WASM for txtx-ext-bitcoin
         run: cargo build --package txtx-ext-bitcoin --release --locked --target wasm32-unknown-unknown --features wasm
