--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 txtx-vm = { path = "../txtx-vm" }
-txtx-ext-bitcoin = { path = "../txtx-ext-bitcoin" }
+txtx-ext-ethereum = { path = "../txtx-ext-ethereum" }
 txtx-gql = { path = "../txtx-gql" }
 hiro-system-kit = "0.3.1"
 clap = { version = "4.4.6", features = ["derive"], optional = true }
