--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,8 +46,8 @@ jobs:
       - name: Build WASM for txtx-core
         run: cargo build --package txtx-core --release --locked --target wasm32-unknown-unknown --features wasm
 
-      - name: Build WASM for txtx-ext-kit
-        run: cargo build --package txtx-ext-kit --release --locked --target wasm32-unknown-unknown --features wasm
+      - name: Build WASM for txtx-addon-kit
+        run: cargo build --package txtx-addon-kit --release --locked --target wasm32-unknown-unknown --features wasm
 
       - name: Build WASM for txtx-ext-bitcoin
         run: cargo build --package txtx-ext-bitcoin --release --locked --target wasm32-unknown-unknown --features wasm
