--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 hex = "0.4.3"
 daggy = "0.8.0"
 uuid = { version = "1.7.0", features = ["v4"] }
-txtx-ext-kit = { path = "../txtx-ext-kit" }
+txtx-addon-kit = { path = "../txtx-addon-kit" }
 getrandom = { version = "0.2", features = ["js"] }
 
 [features]
-wasm = ["txtx-ext-kit/wasm"]
+wasm = ["txtx-addon-kit/wasm"]
 
 [lib]
 crate-type = ["lib", "cdylib"] 
