--- a/components/txtx-ext-bitcoin/Cargo.toml
+++ b/components/txtx-ext-bitcoin/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 sha2 = "0.10.8"
 # strum = "0.25.0"
 # strum_macros = "0.25.3"
-txtx-ext-kit = { path = "../txtx-ext-kit" }
+txtx-addon-kit = { path = "../txtx-addon-kit" }
 
 [features]
-wasm = ["txtx-ext-kit/wasm"]
+wasm = ["txtx-addon-kit/wasm"]
 
 [lib]
 crate-type = ["lib", "cdylib"] 
