--- a/components/txtx-addon-network-stacks/Cargo.toml
+++ b/components/txtx-addon-network-stacks/Cargo.toml
@@ -5,9 +5,8 @@ edition = "2021"
 
 [dependencies]
 sha2 = "0.10.8"
-# strum = "0.25.0"
-# strum_macros = "0.25.3"
 txtx-addon-kit = { path = "../txtx-addon-kit" }
+lazy_static = "1.4.0"
 
 [features]
 wasm = ["txtx-addon-kit/wasm"]
