--- a/components/txtx-gql/Cargo.toml
+++ b/components/txtx-gql/Cargo.toml
@@ -14,3 +14,6 @@ uuid = { version = "1.6.1", features = ["serde", "v7"] }
 juniper = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
 juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
 juniper_rocket = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
+serde = "1.0.196"
+serde_derive = "1"
+serde_json = "1.0.113"
