--- a/components/txtx-addon-network-stacks/Cargo.toml
+++ b/components/txtx-addon-network-stacks/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 sha2 = "0.10.8"
 txtx-addon-kit = { path = "../txtx-addon-kit" }
 lazy_static = "1.4.0"
-# clarinet-files = { version = "2.0.1", default-features = false }
-clarity-repl = { version = "2.0.0", default-features = false }
-# clarinet-deployments = { version = "1.0.3", default-features = false }
+# chainhook-types = "1.3.3"
+# clarinet-files = { version = "2.0.1" }
+clarinet-deployments = "1.0.3"
+clarity-repl = "1.8.0"
+# clarinet-deployments = { path = "../../../clarinet/components/clarinet-deployments" }
 
 [features]
 wasm = ["txtx-addon-kit/wasm"]
