--- a/components/txtx-addon-network-stacks/Cargo.toml
+++ b/components/txtx-addon-network-stacks/Cargo.toml
@@ -9,8 +9,8 @@ txtx-addon-kit = { path = "../txtx-addon-kit" }
 lazy_static = "1.4.0"
 # chainhook-types = "1.3.3"
 # clarinet-files = { version = "2.0.1" }
-clarinet-deployments = "1.0.3"
-clarity-repl = "1.8.0"
+clarinet-deployments = { version = "1.0.3", default-features = false, features = ["wasm"]}
+clarity-repl = { version = "1.8.0", default-features = false, features = ["wasm"]}
 # clarinet-deployments = { path = "../../../clarinet/components/clarinet-deployments" }
 
 [features]
