--- a/components/txtx-addon-network-stacks/Cargo.toml
+++ b/components/txtx-addon-network-stacks/Cargo.toml
@@ -7,14 +7,18 @@ edition = "2021"
 sha2 = "0.10.8"
 txtx-addon-kit = { path = "../txtx-addon-kit" }
 lazy_static = "1.4.0"
-# chainhook-types = "1.3.3"
-# clarinet-files = { version = "2.0.1" }
-clarinet-deployments = { version = "1.0.3", default-features = false, features = ["wasm"]}
-clarity-repl = { version = "1.8.0", default-features = false, features = ["wasm"]}
-# clarinet-deployments = { path = "../../../clarinet/components/clarinet-deployments" }
+clarity = { version = "2", default-features = false, optional = true, git = "https://github.com/lgalabru/stacks-core.git", rev = "f9c5d78717b3155d8245941514742e7928bd16fa", package = "clarity" }
+wasm-bindgen = { version = "=0.2.84", optional = true }
+wasm-bindgen-futures = { version = "0.4", optional = true }
 
 [features]
-wasm = ["txtx-addon-kit/wasm"]
+default = ["wasm"]
+wasm = [
+  "txtx-addon-kit/wasm",
+  "wasm-bindgen",
+  "clarity/wasm",
+]
 
 [lib]
-crate-type = ["lib", "cdylib"] 
+crate-type = ["cdylib", "rlib"]
+path = "src/lib.rs"
