--- a/components/txtx-addon-network-stacks/Cargo.toml
+++ b/components/txtx-addon-network-stacks/Cargo.toml
@@ -16,6 +16,7 @@ hmac = "0.12.0"
 pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
 tiny-hderive = { version = "0.3.0" }
 libsecp256k1 = { version = "0.7.0" }
+serde_json = "1.0.113"
 
 [features]
 default = ["wasm"]
