update sign transaction command

--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -12,6 +12,7 @@ serde_derive = "1"
 url = { version = "2.2.2", features = ["serde"] }
 uuid = { version = "1.7.0", features = ["v4"] }
 getrandom = { version = "0.2", features = ["js"] }
+hex = "0.4.3"
 
 [features]
 wasm = []
