--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2021"
 hex = "0.4.3"
 daggy = "0.8.0"
 txtx-addon-kit = { path = "../txtx-addon-kit" }
+futures = { version = "0.3.22", features = ["alloc"], default-features = false }
 getrandom = { version = "0.2", features = ["js"] }
 lazy_static = "1.4.0"
 jaq-core = "1.2.1"
+rust-fsm = { version = "0.6.1", path = "../../../rust-fsm/rust-fsm" }
+async-trait = "0.1.78"
 
 [features]
 wasm = ["txtx-addon-kit/wasm"]
