disable async commands for wasm

--- a/components/txtx-addon-network-stacks/Cargo.toml
+++ b/components/txtx-addon-network-stacks/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 sha2 = "0.10.8"
-txtx-addon-kit = { path = "../txtx-addon-kit" }
+txtx-addon-kit = { path = "../txtx-addon-kit", default-features = false}
 lazy_static = "1.4.0"
 clarity-repl = { version = "2.0.0", default-features = false }
 clarity-vm = { version = "=2.1.1", default-features = false }
@@ -20,7 +20,7 @@ serde_json = "1.0.113"
 rust-fsm = { version = "0.6.1", git="https://github.com/MicaiahReid/rust-fsm.git", branch="add-sm-derivations"}
 
 [features]
-default = ["wasm"]
+default = ["clarity-repl/sdk", "clarity-vm/default", "clarinet-deployments/default", "txtx-addon-kit/default"]
 wasm = [
   "txtx-addon-kit/wasm",
   "wasm-bindgen",
