--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -18,12 +18,11 @@ reqwest = { version = "0.12.3", default-features = false, features = [
     "json",
     "rustls-tls",
 ]}
-tokio = { version = "1.37.0", default-features = false, features = [
-    "rt"
-]}
+tokio = { version = "1.37.0", default-features = false, optional = true}
 
 [features]
-wasm = []
+default=["tokio/rt", "tokio/time", "tokio/net"]
+wasm = ["tokio/rt"]
 
 [lib]
 crate-type = ["lib", "cdylib"] 
