--- a/components/txtx-addon-network-bitcoin/Cargo.toml
+++ b/components/txtx-addon-network-bitcoin/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 sha2 = "0.10.8"
 # strum = "0.25.0"
 # strum_macros = "0.25.3"
-txtx-addon-kit = { path = "../txtx-addon-kit" }
+txtx-addon-kit = { path = "../txtx-addon-kit", default-features = false}
 
 [features]
+default = ["txtx-addon-kit/default"]
 wasm = ["txtx-addon-kit/wasm"]
 
 [lib]
