--- a/components/txtx-addon-network-stacks/Cargo.toml
+++ b/components/txtx-addon-network-stacks/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 
 [dependencies]
 sha2 = "0.10.8"
-txtx-addon-kit = { path = "../txtx-addon-kit" }
+txtx-addon-kit = { path = "../txtx-addon-kit", default-features = false}
 lazy_static = "1.4.0"
-clarity-repl = { version = "2.0.0", default-features = false, optional = true }
-clarinet-deployments = { version = "1.0.3", default-features = false, optional = true }
-# clarity = { version = "2", default-features = false, optional = true, git = "https://github.com/lgalabru/stacks-core.git", rev = "f9c5d78717b3155d8245941514742e7928bd16fa", package = "clarity" }
+clarity-repl = { version = "2.0.0", default-features = false }
+clarity-vm = { version = "=2.1.1", default-features = false }
+clarinet-deployments = { version = "1.0.3", default-features = false }
 wasm-bindgen = { version = "=0.2.84", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
 hmac = "0.12.0"
@@ -17,13 +17,15 @@ pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
 tiny-hderive = { version = "0.3.0" }
 libsecp256k1 = { version = "0.7.0" }
 serde_json = "1.0.113"
+rust-fsm = { version = "0.6.1", git="https://github.com/MicaiahReid/rust-fsm.git", branch="add-sm-derivations"}
 
 [features]
-default = ["wasm"]
+default = ["clarity-repl/sdk", "clarity-vm/default", "clarinet-deployments/default", "txtx-addon-kit/default"]
 wasm = [
   "txtx-addon-kit/wasm",
   "wasm-bindgen",
   "clarity-repl/wasm",
+  "clarity-vm/wasm",
   "clarinet-deployments/wasm",
 ]
 
