--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -13,9 +13,16 @@ url = { version = "2.2.2", features = ["serde"] }
 uuid = { version = "1.7.0", features = ["v4"] }
 getrandom = { version = "0.2", features = ["js"] }
 hex = "0.4.3"
+rust-fsm = { version = "0.6.1", git="https://github.com/MicaiahReid/rust-fsm.git", branch="add-sm-derivations"}
+reqwest = { version = "0.12.3", default-features = false, features = [
+    "json",
+    "rustls-tls",
+]}
+tokio = { version = "1.37.0", default-features = false, optional = true}
 
 [features]
-wasm = []
+default=["tokio/rt", "tokio/time", "tokio/net"]
+wasm = ["tokio/rt"]
 
 [lib]
 crate-type = ["lib", "cdylib"] 
