--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -11,6 +11,7 @@ getrandom = { version = "0.2", features = ["js"] }
 lazy_static = "1.4.0"
 jaq-core = "1.2.1"
 rust-fsm = { version = "0.6.1", git="https://github.com/MicaiahReid/rust-fsm.git", branch="add-sm-derivations"}
+indexmap = "2.2.6"
 
 [features]
 default = ["txtx-addon-kit/default"]
