--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,6 +79,15 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          path: txtx
+
+      - name: Checkout Web UI
+        uses: actions/checkout@v4
+        with:
+          repository: txtx/txtx-web-ui
+          token: ${{ secrets.TXTX_ACCESS_TOKEN }} 
+          path: txtx-web-ui 
 
       - name: Install Rust toolchain
         run: rustup toolchain install stable --profile minimal --target ${{ matrix.target }}
