--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,6 +89,14 @@ jobs:
           token: ${{ secrets.TXTX_ACCESS_TOKEN }} 
           path: txtx-web-ui 
 
+      - name: List Directories
+        run: |
+          pwd
+          ls txtx
+          ls txtx-web-ui
+
+      - name: Change Directories
+        run: cd txtx
       - name: Install Rust toolchain
         run: rustup toolchain install stable --profile minimal --target ${{ matrix.target }}
 
@@ -138,7 +146,7 @@ jobs:
 
       - name: Build - Cargo
         if: matrix.target != 'x86_64-unknown-linux-musl'
-        run: cargo build --manifest-path ./txtx/Cargo.toml --release --locked --target ${{ matrix.target }}
+        run: cargo build --release --locked --target ${{ matrix.target }}
         
       # Don't compress for Windows because winget can't yet unzip files
       - name: Compress cargo artifact (Linux)
