--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,6 +89,13 @@ jobs:
           token: ${{ secrets.TXTX_ACCESS_TOKEN }} 
           path: txtx-web-ui 
 
+      - name: Build Web UI
+        run: |
+          cd txtx-web-ui
+          npm i
+          npm run build
+          cd ..
+
       - name: List Directories
         run: |
           pwd
@@ -144,9 +151,8 @@ jobs:
 
       - name: Build - Cargo
         if: matrix.target != 'x86_64-unknown-linux-musl'
-        run: |
-          cd txtx
-          cargo build --release --locked --target ${{ matrix.target }}
+        run: 
+          cargo build --manifest-path ./txtx/Cargo.toml --release --locked --target ${{ matrix.target }}
         
       # Don't compress for Windows because winget can't yet unzip files
       - name: Compress cargo artifact (Linux)
