try to fix windows

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -159,10 +159,11 @@ jobs:
         if: matrix.os != 'windows-latest'
         run: tar -C txtx/target/${{ matrix.target }}/release -zcvf txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz txtx
 
-      - name: Rename cargo artifact (Windows)
+      - name: Compress cargo artifact (Windows)
         if: matrix.os == 'windows-latest'
-        shell: bash
-        run: mv txtx/target/wix/*.msi txtx-${{ env.SHORT_TARGET_NAME }}.msi
+        run: |
+          cd txtx\target\${{ matrix.target }}\release
+          7z a ../../../../txtx-${{ env.SHORT_TARGET_NAME }}.zip txtx
 
       # Separate uploads to prevent paths from being preserved
       - name: Upload cargo artifacts (Linux)
