--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [
     "components/txtx-cli",
     "components/txtx-core",
     "components/txtx-addon-kit",
-    # "components/txtx-addon-network-bitcoin",
+    "components/txtx-addon-network-bitcoin",
     "components/txtx-addon-network-stacks"
 ]
 default-members = ["components/txtx-cli"]
