--- a/components/txtx-addon-network-bitcoin/Cargo.toml
+++ b/components/txtx-addon-network-bitcoin/Cargo.toml
@@ -5,13 +5,24 @@ edition = "2021"
 
 [dependencies]
 sha2 = "0.10.8"
-# strum = "0.25.0"
-# strum_macros = "0.25.3"
 txtx-addon-kit = { path = "../txtx-addon-kit", default-features = false}
+lazy_static = "1.4.0"
+wasm-bindgen = { version = "=0.2.84", optional = true }
+wasm-bindgen-futures = { version = "0.4", optional = true }
+hmac = "0.12.0"
+pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
+tiny-hderive = { version = "0.3.0" }
+libsecp256k1 = { version = "0.7.0" }
+serde_json = "1.0.113"
+rust-fsm = { version = "0.6.1", git="https://github.com/MicaiahReid/rust-fsm.git", branch="add-sm-derivations"}
 
 [features]
 default = ["txtx-addon-kit/default"]
-wasm = ["txtx-addon-kit/wasm"]
+wasm = [
+  "txtx-addon-kit/wasm",
+  "wasm-bindgen"
+]
 
 [lib]
-crate-type = ["lib", "cdylib"] 
+crate-type = ["cdylib", "rlib"]
+path = "src/lib.rs"
