--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 hcl-edit = "0.7.5"
 serde = "1"
 serde_derive = "1"
+jaq-interpret = "1.2.1"
 url = { version = "2.2.2", features = ["serde"] }
 uuid = { version = "1.7.0", features = ["v4"] }
 getrandom = { version = "0.2", features = ["js"] }
