--- a/components/txtx-addon-network-stacks/Cargo.toml
+++ b/components/txtx-addon-network-stacks/Cargo.toml
@@ -18,6 +18,8 @@ tiny-hderive = { version = "0.3.0" }
 libsecp256k1 = { version = "0.7.0" }
 serde_json = "1.0.113"
 rust-fsm = { version = "0.6.1", git="https://github.com/MicaiahReid/rust-fsm.git", branch="add-sm-derivations"}
+serde = "1"
+serde_derive = "1"
 
 [features]
 default = ["clarity-repl/sdk", "clarity-vm/default", "clarinet-deployments/default", "txtx-addon-kit/default"]
