--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,36 +13,36 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  wasm_build:
-    name: Build Project for WASM target
-    runs-on: ubuntu-latest
+  # wasm_build:
+  #   name: Build Project for WASM target
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: Install Rust toolchain
-        run: |
-          rustup toolchain install stable --profile minimal --target wasm32-unknown-unknown
-          rustup target add wasm32-unknown-unknown
-          echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
+  #     - name: Install Rust toolchain
+  #       run: |
+  #         rustup toolchain install stable --profile minimal --target wasm32-unknown-unknown
+  #         rustup target add wasm32-unknown-unknown
+  #         echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
 
-      - name: Cache cargo
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/
-            ./target/wasm32-unknown-unknown/release/
-          key: ${{ runner.os }}-rust-${{ env.RUST_VERSION_HASH }}-cargo-${{ hashFiles('./Cargo.lock') }}
+  #     - name: Cache cargo
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: |
+  #           ~/.cargo/
+  #           ./target/wasm32-unknown-unknown/release/
+  #         key: ${{ runner.os }}-rust-${{ env.RUST_VERSION_HASH }}-cargo-${{ hashFiles('./Cargo.lock') }}
 
-      - name: Build WASM for txtx-core
-        run: cargo build --package txtx-core --release --locked --target wasm32-unknown-unknown --features wasm --no-default-features
+  #     - name: Build WASM for txtx-core
+  #       run: cargo build --package txtx-core --release --locked --target wasm32-unknown-unknown --features wasm --no-default-features
 
-      - name: Build WASM for txtx-addon-kit
-        run: cargo build --package txtx-addon-kit --release --locked --target wasm32-unknown-unknown --features wasm --no-default-features
+  #     - name: Build WASM for txtx-addon-kit
+  #       run: cargo build --package txtx-addon-kit --release --locked --target wasm32-unknown-unknown --features wasm --no-default-features
 
-      - name: Build WASM for txtx-addon-network-stacks
-        run: cargo build --package txtx-addon-network-stacks --release --locked --target wasm32-unknown-unknown --features wasm --no-default-features
+  #     - name: Build WASM for txtx-addon-network-stacks
+  #       run: cargo build --package txtx-addon-network-stacks --release --locked --target wasm32-unknown-unknown --features wasm --no-default-features
 
   dist_txtx:
     name: Build Txtx Distributions
@@ -57,18 +57,18 @@ jobs:
             target: x86_64-unknown-linux-gnu
             architecture: x64
             libc: glibc
-          - os: windows-latest
-            platform: windows
-            target: x86_64-pc-windows-msvc
-            architecture: x64
-          - os: macos-latest
-            platform: darwin
-            target: x86_64-apple-darwin
-            architecture: x64
-          - os: macos-latest
-            platform: darwin
-            target: aarch64-apple-darwin
-            architecture: arm64
+          # - os: windows-latest
+          #   platform: windows
+          #   target: x86_64-pc-windows-msvc
+          #   architecture: x64
+          # - os: macos-latest
+          #   platform: darwin
+          #   target: x86_64-apple-darwin
+          #   architecture: x64
+          # - os: macos-latest
+          #   platform: darwin
+          #   target: aarch64-apple-darwin
+          #   architecture: arm64
 
     steps:
       - name: Configure git to use LF (Windows)
