--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -181,19 +181,32 @@ jobs:
           path: txtx-${{ env.SHORT_TARGET_NAME }}.msi
 
       - name: Upload to S3 (Linux)
-        if: matrix.os != 'windows-latest'
-        uses: shallwefootball/s3-upload-action@master
-        with:
-          aws_key_id: ${{secrets.AWS_KEY_ID}}
-          aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: txtx
-          source_dir: ../txtx
+        shell: bash
+        env:
+          aws_key_id: ${{ secrets.AWS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_s3_bucket: txtx
+        run: |
+          sudo apt-get update && sudo apt-get -y install awscli
+          aws configure set aws_access_key_id $aws_key_id
+          aws configure set aws_secret_access_key $aws_secret_access_key 
+          aws configure set default.region us-east-1
+          aws s3 txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz s3://$aws_s3_bucket/
 
-      - name: Upload to S3 (Windows)
-        if: matrix.os == 'windows-latest'
-        uses: shallwefootball/s3-upload-action@master
-        with:
-          aws_key_id: ${{secrets.AWS_KEY_ID}}
-          aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: txtx
-          source_dir: ../txtx
+      # - name: Upload to S3 (Linux)
+      #   if: matrix.os != 'windows-latest'
+      #   uses: shallwefootball/s3-upload-action@master
+      #   with:
+      #     aws_key_id: ${{secrets.AWS_KEY_ID}}
+      #     aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+      #     aws_bucket: txtx
+      #     source_dir: ../txtx
+
+      # - name: Upload to S3 (Windows)
+      #   if: matrix.os == 'windows-latest'
+      #   uses: shallwefootball/s3-upload-action@master
+      #   with:
+      #     aws_key_id: ${{secrets.AWS_KEY_ID}}
+      #     aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+      #     aws_bucket: txtx
+      #     source_dir: ../txtx
