--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -180,18 +180,19 @@ jobs:
           name: txtx-${{ env.SHORT_TARGET_NAME }}
           path: txtx-${{ env.SHORT_TARGET_NAME }}.msi
 
-      - name: Upload to S3 (Linux)
-        shell: bash
-        env:
-          aws_key_id: ${{ secrets.AWS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_s3_bucket: txtx
-        run: |
-          sudo apt-get update && sudo apt-get -y install awscli
-          aws configure set aws_access_key_id $aws_key_id
-          aws configure set aws_secret_access_key $aws_secret_access_key 
-          aws configure set default.region us-east-1
-          aws s3 txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz s3://$aws_s3_bucket/
+      - name: Upload to S3
+        uses: hkusu/s3-upload-action@v2
+        id: upload # specify some ID for use in subsequent steps
+        with:
+          aws-access-key-id: ${{ secrets.AWS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: 'ap-northeast-1'
+          aws-bucket: txtx
+          file-path: txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz
+          output-file-url: 'true' # specify true
+          destination-dir: /releases
+      - name: Show URL
+        run: echo '${{ steps.upload.outputs.file-url }}' # use this output
 
       # - name: Upload to S3 (Linux)
       #   if: matrix.os != 'windows-latest'
