--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -189,10 +189,11 @@ jobs:
           aws-region: 'ap-northeast-1'
           aws-bucket: txtx
           file-path: txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz
-          output-file-url: 'true' # specify true
+          output-file-url: 'true' 
           destination-dir: /releases
+          bucket-root: /
       - name: Show URL
-        run: echo '${{ steps.upload.outputs.file-url }}' # use this output
+        run: echo '${{ steps.upload.outputs.file-url }}' 
 
       # - name: Upload to S3 (Linux)
       #   if: matrix.os != 'windows-latest'
