--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -3,9 +3,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
   workflow_dispatch:
 
 concurrency:
@@ -26,10 +23,10 @@ jobs:
             target: x86_64-unknown-linux-gnu
             architecture: x64
             libc: glibc
-          - os: windows-latest
-            platform: windows
-            target: x86_64-pc-windows-msvc
-            architecture: x64
+          # - os: windows-latest
+          #   platform: windows
+          #   target: x86_64-pc-windows-msvc
+          #   architecture: x64
           - os: macos-latest
             platform: darwin
             target: x86_64-apple-darwin
