build: add ci to upload builds (#35)
* build: add ci to upload build

* checkout web ui

* provide path to manifest

* try changing dirs

* try again

* biuld web UI

* path to cargo artifacts

* pin ubuntu dep

* try to fix windows

* try again for windows

* disable some ci for now

* upload to s3 attempt

* remove id

* source_dir

* upload dir?

* try again

* try again

* specify bucket root

* enable other ci

* split ci to pr/main push

* delete general ci file

* test ci

* test

* disable windows

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -3,24 +3,13 @@ on:
   pull_request:
     branches:
       - main
-      - develop
-  push:
-    branches:
-      - main
-      - develop
-
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  pre_run:
-    name: Cancel previous runs
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@ad6cb1b847ffb509a69b745b6ee2f1d14dfe14b8
-        with:
-          access_token: ${{ github.token }}
-          persist-credentials: false
   wasm_build:
     name: Build Project for WASM target
     runs-on: ubuntu-latest
