--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -20,6 +20,8 @@ reqwest = { version = "0.12.3", default-features = false, features = [
     "rustls-tls",
 ]}
 tokio = { version = "1.37.0", default-features = false, optional = true}
+lazy_static = "1.4.0"
+indoc = "2.0.5"
 
 [features]
 default=["tokio/rt", "tokio/time", "tokio/net"]
