--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -28,6 +28,7 @@ juniper_rocket = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b
 rocket = { version = "0.5.0", features = ["json"] }
 ansi_term = "0.12.1"
 atty = "0.2.14"
+mustache = "0.9.0"
 
 [features]
 default = ["cli"]
