--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -14,6 +14,7 @@ jaq-parse = "1.0.2"
 serde_json = "1.0.113"
 rust-fsm = { version = "0.6.1", git="https://github.com/MicaiahReid/rust-fsm.git", branch="add-sm-derivations"}
 indexmap = "2.2.6"
+petgraph = "0.6.5"
 
 [features]
 default = ["txtx-addon-kit/default"]
