--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -11,7 +11,7 @@ serde = "1"
 serde_derive = "1"
 jaq-interpret = "1.2.1"
 url = { version = "2.2.2", features = ["serde"] }
-uuid = { version = "1.7.0", features = ["v4"] }
+uuid = { version = "1.7.0", features = ["v4", "serde"] }
 getrandom = { version = "0.2", features = ["js"] }
 hex = "0.4.3"
 rust-fsm = "0.6.2"
@@ -22,6 +22,7 @@ reqwest = { version = "0.12.3", default-features = false, features = [
 tokio = { version = "1.37.0", default-features = false, optional = true}
 lazy_static = "1.4.0"
 indoc = "2.0.5"
+hiro-system-kit = "0.3.4"
 
 [features]
 default=["tokio/rt", "tokio/time", "tokio/net"]
