--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "1.37.0", default-features = false, optional = true}
 lazy_static = "1.4.0"
 indoc = "2.0.5"
 hiro-system-kit = "0.3.4"
+crossbeam-channel = "0.5.8"
 
 [features]
 default=["tokio/rt", "tokio/time", "tokio/net"]
