--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -24,6 +24,7 @@ lazy_static = "1.4.0"
 indoc = "2.0.5"
 hiro-system-kit = "0.3.4"
 crossbeam-channel = "0.5.8"
+futures = "0.3"
 
 [dev-dependencies]
 serde_json = "1"
