--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -24,11 +24,15 @@ ratatui = { version = "0.26.0-alpha.2", features = ["crossterm"] }
 itertools = "0.12.0"
 unicode-width = "0.1"
 rust-embed="8.2.0"
-juniper_rocket = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
-rocket = { version = "0.5.0", features = ["json"] }
+juniper_actix = {version = "0.5.0", features = ["subscriptions"] }
+juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
+actix-web = "4"
+actix-cors = "0.7.0"
 ansi_term = "0.12.1"
 atty = "0.2.14"
 mustache = "0.9.0"
+tokio = "1.37.0"
+mime_guess = "2.0.4"
 
 [features]
 default = ["cli"]
