--- a/components/txtx-gql/Cargo.toml
+++ b/components/txtx-gql/Cargo.toml
@@ -10,10 +10,10 @@ txtx-core = { path = "../txtx-core" }
 futures = { version = "0.3.22", features = ["alloc"], default-features = false }
 futures-enum = { version = "0.1.12", default-features = false }
 uuid = { version = "1.6.1", features = ["serde", "v7"] }
-# c0e1b3e -> 0.16.0-dev
-juniper = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
+juniper = { version = "0.16.1" }
 juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
-juniper_rocket = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
 serde = "1.0.196"
 serde_derive = "1"
 serde_json = "1.0.113"
+async-stream = "0.3.5"
+tokio = "1.37.0"
