--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -14,6 +14,7 @@ jaq-parse = "1.0.2"
 serde_json = "1.0.113"
 indexmap = "2.2.6"
 petgraph = "0.6.5"
+ripemd = "0.1.3"
 
 [dev-dependencies]
 txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks"}
