--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -19,10 +19,8 @@ reqwest = { version = "0.12.3", default-features = false, features = [
     "json",
     "rustls-tls",
 ]}
-tokio = { version = "1.37.0", default-features = false, optional = true}
 lazy_static = "1.4.0"
 indoc = "2.0.5"
-hiro-system-kit = "0.3.4"
 crossbeam-channel = "0.5.8"
 futures = "0.3"
 
@@ -31,8 +29,8 @@ serde_json = "1"
 test-case = "*"
 
 [features]
-default=["tokio/rt", "tokio/time", "tokio/net"]
-wasm = ["tokio/rt"]
+default=[]
+wasm = []
 
 [lib]
 crate-type = ["lib", "cdylib"] 
