--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -18,6 +18,7 @@ ripemd = "0.1.3"
 
 [dev-dependencies]
 txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks"}
+hiro-system-kit = "0.3.4"
 
 [features]
 default = ["txtx-addon-kit/default"]
