--- a/components/txtx-addon-kit/Cargo.toml
+++ b/components/txtx-addon-kit/Cargo.toml
@@ -11,21 +11,27 @@ serde = "1"
 serde_derive = "1"
 jaq-interpret = "1.2.1"
 url = { version = "2.2.2", features = ["serde"] }
-uuid = { version = "1.7.0", features = ["v4"] }
+uuid = { version = "1.7.0", features = ["v4", "serde"] }
 getrandom = { version = "0.2", features = ["js"] }
 hex = "0.4.3"
-rust-fsm = { version = "0.6.1", git="https://github.com/MicaiahReid/rust-fsm.git", branch="add-sm-derivations"}
+rust-fsm = "0.6.2"
 reqwest = { version = "0.12.3", default-features = false, features = [
     "json",
     "rustls-tls",
 ]}
-tokio = { version = "1.37.0", default-features = false, optional = true}
 lazy_static = "1.4.0"
 indoc = "2.0.5"
+crossbeam-channel = "0.5.8"
+futures = "0.3"
+
+[dev-dependencies]
+serde_json = "1"
+test-case = "*"
+hiro-system-kit = "0.3.4"
 
 [features]
-default=["tokio/rt", "tokio/time", "tokio/net"]
-wasm = ["tokio/rt"]
+default=[]
+wasm = []
 
 [lib]
 crate-type = ["lib", "cdylib"] 
