--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -12,9 +12,13 @@ lazy_static = "1.4.0"
 jaq-interpret = "1.2.1"
 jaq-parse = "1.0.2"
 serde_json = "1.0.113"
-rust-fsm = { version = "0.6.1", git="https://github.com/MicaiahReid/rust-fsm.git", branch="add-sm-derivations"}
 indexmap = "2.2.6"
 petgraph = "0.6.5"
+ripemd = "0.1.3"
+
+[dev-dependencies]
+txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks"}
+hiro-system-kit = "0.3.4"
 
 [features]
 default = ["txtx-addon-kit/default"]
