--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0.113"
 indexmap = "2.2.6"
 petgraph = "0.6.5"
 ripemd = "0.1.3"
+sha2 = "0.10.8"
 
 [dev-dependencies]
 txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks"}
