--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -12,6 +12,7 @@ lazy_static = "1.4.0"
 jaq-interpret = "1.2.1"
 jaq-parse = "1.0.2"
 serde_json = "1.0.113"
+libsecp256k1 = "0.7.0"
 indexmap = "2.2.6"
 petgraph = "0.6.5"
 ripemd = "0.1.3"
