--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -153,8 +153,8 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'ap-northeast-1'
-          aws-bucket: txtx
+          aws-region: 'us-east-2'
+          aws-bucket: txtx-public
           file-path: txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz
           output-file-url: 'true' 
           destination-dir: /releases
@@ -171,8 +171,8 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'ap-northeast-1'
-          aws-bucket: txtx
+          aws-region: 'us-east-2'
+          aws-bucket: txtx-public
           file-path: txtx-${{ env.SHORT_TARGET_NAME }}.msi
           output-file-url: 'true' 
           destination-dir: /releases
