ci: build .env file

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -18,6 +18,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Build .env file
+        run: |
+          touch .env
+          echo RELAYER_BASE_URL="https://txtx.link" >> .env
+          echo RELAYER_HOST="txtx.link" >> .env
+          cat .env
+
       - name: Install Rust toolchain
         run: |
           rustup toolchain install stable --profile minimal --target wasm32-unknown-unknown
