--- a/examples/stacks/multisig/txtx.yml
+++ b/examples/stacks/multisig/txtx.yml
@@ -1,10 +1,15 @@
 ---
 name: Stacks Multisig
+id: stacks-multisig
 runbooks:
-- name: multisig
+- name: Multisig
+  id: multisig
   description: Test stacks multisig
   location: "./run"
 environments:
-  development:
+  devnet:
+    stacks_network_id: testnet
+    stacks_api_url: http://localhost:3999
+  testnet:
     stacks_network_id: testnet
     stacks_api_url: https://api.testnet.hiro.so
