breaking: update cli interface (#105)
* fix: remove clap conflicts with

* fix(stacks): hardcode estimate to prevent recursion

* fix: make default devnet env http

* chore: set default manifest path via clap

* chore: set the default port via clap

* chore: make supervision modes exclusive; change wording

* chore: clean up arg help text

* test: add some tests for cli args

* feat: allow any name for project/runbook

* chore: use alice address for default env

* chore: format `txtx ls` output

* chore: upgrade example txtx.yml files

* chore: swap id and name order

* register bns namespace runbook

* fix: redundant logging

--- a/examples/stacks/multisig/txtx.yml
+++ b/examples/stacks/multisig/txtx.yml
@@ -1,10 +1,19 @@
 ---
 name: Stacks Multisig
+id: stacks-multisig
 runbooks:
-- name: multisig
+- name: Multisig
+  id: multisig
   description: Test stacks multisig
   location: "./run"
+- name: Register BNS Namespace
+  id: namespace-register
+  description: Register a BNS namespace
+  location: "./namespace-register"
 environments:
-  development:
+  devnet:
+    stacks_network_id: testnet
+    stacks_api_url: http://localhost:3999
+  testnet:
     stacks_network_id: testnet
     stacks_api_url: https://api.testnet.hiro.so
