refactor: revisit evaluation flow

--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -21,6 +21,7 @@ serde_derive = "1"
 serde_yml = "0.0.10"
 chrono = "0.4.38"
 similar = "2.5.0"
+txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks"}
 
 [dev-dependencies]
 txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks"}
